@@ -1,1 +1,11 @@
-type Sssd::LdapAccessOrder = Array[Enum['filter','lockout','expire','authorized_service','host']]
+type Sssd::LdapAccessOrder = Array[Enum[
+  'filter',
+  'lockout',
+  'ppolicy', # Only available in sssd >= 1.14.0
+  'expire',
+  'pwd_expire_policy_reject', # Only available in sssd >= 1.14.0
+  'pwd_expire_policy_warn', # Only available in sssd >= 1.14.0
+  'pwd_expire_policy_renew', # Only available in sssd >= 1.14.0
+  'authorized_service',
+  'host'
+]]
